quilt/tests/snapshots/ui__diagnostics@unknown_annotation.rs.quilt.snap
---
source: quilt/tests/ui.rs
expression: rendered
input_file: quilt/tests/ui/unknown_annotation.rs.quilt
---
  × "klingon" can't be used as Language
