quilt/tests/snapshots/ui__diagnostics@unknown_ground_language.cobol.quilt.snap
---
source: quilt/tests/ui.rs
expression: rendered
input_file: quilt/tests/ui/unknown_ground_language.cobol.quilt
---
  × "cobol" can't be used as Language
