quilt/tests/snapshots/ui__lean_emit_unsupported_lean_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check lean_emit_unsupported.lean.quilt
exit: 1

lean_emit_unsupported.lean.quilt:   × lean can't emit `←`: the string-based meta has no `b_` accumulator to emit
  │ into — build sequences functionally instead (`List.map` +
  │ `String.intercalate`)

Error:   × 1 of 1 file(s) failed to check
