quilt/tests/snapshots/ui__nix_reduce_unsupported_nix_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check nix_reduce_unsupported.nix.quilt
exit: 1

nix_reduce_unsupported.nix.quilt:   × nix can't reduce `↓`: the string-based meta has no `QTerm` runtime to
  │ evaluate a fragment — compute the value in ordinary Nix and splice it with
  │ `↙…↘`

Error:   × 1 of 1 file(s) failed to check
