quilt/tests/snapshots/ui__object_parse_error_rs_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check object_parse_error.rs.quilt
exit: 1

object_parse_error.rs.quilt:   × Parsed with errors: ["1 + "] (source_file (integer_literal) (ERROR))

Error:   × 1 of 1 file(s) failed to check
