quilt/tests/snapshots/ui__pattern_let_duplicate_var_rs_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check pattern_let_duplicate_var.rs.quilt
exit: 1

pattern_let_duplicate_var.rs.quilt:   × pattern let binds metavariable `x` more than once

Error:   × 1 of 1 file(s) failed to check
