quilt/tests/snapshots/ui__pattern_let_non_ident_rs_quilt.snap
---
source: quilt/tests/ui.rs
expression: run_check(fixture)
---
$ quilt check pattern_let_non_ident.rs.quilt
exit: 1

pattern_let_non_ident.rs.quilt:   × pattern metavariable must be a plain identifier, got "f(x)"

Error:   × 1 of 1 file(s) failed to check
